<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen android:title="@string/prefs_cat_general" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showChangelog"
            android:summary="@string/prefs_summary_changelog"
            android:title="@string/prefs_title_changelog" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autoupdate"
            android:summary="@string/prefs_summary_update"
            android:title="@string/prefs_title_update" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/prefs_cat_general_appearance" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="useAnimation"
            android:title="@string/prefs_title_general_animation" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/prefs_cat_chatsettings" >
        <PreferenceCategory android:title="@string/prefs_cat_chatappearance" >
            <ListPreference
                android:defaultValue="Lato"
                android:entries="@array/chat_fonts_array"
                android:entryValues="@array/chat_fonts_values"
                android:key="chat_font"
                android:summary="@string/prefs_summary_chatfonts"
                android:title="@string/prefs_title_chatfonts" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/prefs_cat_chatcolor" >
            <ListPreference
                android:defaultValue="green"
                android:entries="@array/chat_drawable_array"
                android:entryValues="@array/chat_drawable_values"
                android:key="chatDrawableSender"
                android:title="@string/right" />
            <ListPreference
                android:defaultValue="green"
                android:entries="@array/chat_drawable_array"
                android:entryValues="@array/chat_drawable_values"
                android:key="chatDrawableReceiver"
                android:title="@string/left" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/prefs_cat_extra" >
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/prefs_cat_notifications" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notificationSound"
            android:summary="@string/prefs_summary_notifysound"
            android:title="@string/prefs_title_notifysound" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notificationVibrate"
            android:summary="@string/prefs_summary_notifyvibration"
            android:title="@string/prefs_title_notifyvibration" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notificationWakelock"
            android:summary="@string/prefs_summary_notifywakelock"
            android:title="@string/prefs_title_notifywakelock" />
    </PreferenceScreen>

</PreferenceScreen>