<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0265ff"
    android:orientation="vertical"
    android:paddingLeft="17dp"
    android:paddingRight="17dp">

    <EditText
        android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rect"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:shadowColor="#F0F0F0"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textColor="#000000"
        android:textColorHint="#B0B0B0"
        android:textCursorDrawable="@null"
        android:textSize="25sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accountName"
        android:layout_centerVertical="true"
        android:background="@drawable/button_round"
        android:padding="15dp"
        android:text="@string/signin"
        android:textColor="#f0f0f0"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/accountEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accountName"
        android:layout_below="@+id/accountName"
        android:background="@drawable/edittext_rect"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:shadowColor="#F0F0F0"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textColor="#000000"
        android:textColorHint="#B0B0B0"
        android:textCursorDrawable="@null"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/accountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accountEmail"
        android:layout_below="@+id/accountEmail"
        android:background="@drawable/edittext_rect"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:shadowColor="#F0F0F0"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textColor="#000000"
        android:textColorHint="#B0B0B0"
        android:textCursorDrawable="@null"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/usernew"
        android:textColor="#f0f0f0"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
